# claude-box

./: .gitignore  Cargo.toml  README.md  install.sh
plan/: cost.md  lessons.md  milestone-1-scaffold.md  milestone-10-warm-pool.md  milestone-11-auth.md  milestone-12-guest-polish.md  milestone-2-vm-lifecycle.md  milestone-3-tool-allowlist.md  milestone-4-stdio-relay.md  milestone-5-image-management.md  milestone-6-zero-copy-binaries.md  milestone-7-operational-hardening.md  milestone-8-integration-tests.md  milestone-9-performance.md
src/: config.rs  gc.rs  images.rs  lib.rs  main.rs  mount.rs  relay.rs  sandbox.rs  tools.rs
src/vm/: guest_setup.rs  health.rs  image.rs  image_cache.rs  mod.rs  ssh_key.rs  tart.rs  warm_pool.rs
tests/: integration_test.rs  tools_test.rs
