[package]
name = "claude-box"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-box"
path = "src/main.rs"

[lib]
name = "claude_box"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
tempfile = "3"
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
libc = "0.2"
indicatif = "0.17"
